--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
-      "jsx": "react-jsx"
+      "jsx": "react"
     },
     "include": ["src/**/*", "src/img.d.ts"]
   }
