--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
-    "server": "nodemon --exec ts-node backend/src/server.ts"
+    "server": "nodemon --exec ts-node backend/src/server.ts",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -17,14 +18,15 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prisma/client": "^5.10.0",
+    "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.3",
-    "prisma": "^5.10.0",
+    "nodemon": "^3.1.0",
+    "package-name": "^0.1.0",
+    "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -40,7 +42,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/react": "^18.2.57",
+    "@types/react": "^18.2.59",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.3",
@@ -49,7 +51,7 @@
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^3.9.10",
+    "typescript": "^4.9.5",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
