--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
-    "package-name": "^0.1.0",
     "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -42,16 +42,21 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.20",
     "@types/react": "^18.2.59",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "auto-reload-brunch": "^3.0.1",
     "babel-loader": "^9.1.3",
+    "clean-css-brunch": "^3.0.0",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "nth-check": "^2.1.1",
     "style-loader": "^3.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
+    "uglify-js-brunch": "^2.10.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
@@ -62,6 +67,13 @@
       "backend/src/**/*.ts"
     ],
     "ext": "ts"
+  },
+  "resolutions": {
+    "**/nth-check": "^2.0.1"
+  },
+  "overrides": {
+    "postcss": "^8.4.31",
+    "nth-check": "^2.1.1"
   },
   "proxy": "http://localhost:4000"
 }
