--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
+      "types": ["node"],
       "jsx": "react"
     },
     "include": ["src/**/*", "src/img.d.ts", "types.d.ts", "custom.d.ts"]
