--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --exec ts-node backend/src/server.ts",
     "start": "concurrently \"npm run server\" \"npm run client\"",
