--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --exec ts-node backend/src/server.ts",
     "start": "concurrently \"npm run server\" \"npm run client\"",
@@ -37,9 +36,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.23.4",
+    "@babel/plugin-transform-numeric-separator": "^7.23.4",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@babel/plugin-transform-private-methods": "^7.23.3",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -47,18 +53,16 @@
     "@types/react": "^18.2.59",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "auto-reload-brunch": "^3.0.1",
     "babel-loader": "^9.1.3",
-    "clean-css-brunch": "^3.0.0",
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "nth-check": "^2.1.1",
     "style-loader": "^3.3.4",
+    "svgo": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "uglify-js-brunch": "^2.10.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
