--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --exec ts-node backend/src/server.ts",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "webpack serve --mode development --open",
+    "start": "webpack serve --mode development --open",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -18,15 +17,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@prisma/client": "^5.10.2",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0",
-    "prisma": "^5.10.2",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
