--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
