--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --exec ts-node backend/src/server.ts",
-    "build": "webpack serve --mode development --open"
+    "build": "webpack serve --mode development --open",
+    "start": "webpack serve --mode development --open"
   },
   "keywords": [],
   "author": "",
