--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm install && npm run start && cd backend && npm install && npx prisma generate && npm start"
+  command = "npm install && npm run build && cd backend && npm install && npx prisma generate && npm start"
   publish = "build"
   functions = "functions"
