--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "npm install && npm run build && cd backend && npm install && npx prisma generate && npm start"
-  publish = "build"
+  publish = "dist"
   functions = "functions"
